# hebrew-dictation

./: .gitignore  HANDOFF.md  LICENSE  README.md  index.html  package-lock.json  package.json
benchmark/: .gitignore  README.md  requirements.txt  run_benchmark.py
benchmark/samples/: README.md
cloudflare-worker/: README.md  package.json  tsconfig.json  wrangler.toml
cloudflare-worker/src/: deepgram-client.ts  groq-client.ts  index.ts  quota.ts  transcribe.ts  types.ts
docs/superpowers/plans/: 2026-06-15-smart-cleanup.md  2026-06-25-batch-transcription-phase1.md  2026-07-03-srt-export.md  2026-07-09-system-audio-capture.md  2026-07-12-recording-modes-ux.md
docs/superpowers/specs/: 2026-06-15-smart-cleanup-design.md  2026-06-22-batch-transcription-design.md  2026-07-03-srt-export-design.md  2026-07-09-system-audio-capture-design.md  2026-07-12-recording-modes-ux.md
scripts/: check-nsis-translations.py
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/nsis/: Hebrew.nsh
src-tauri/src/: api_transcribe.rs  audio.rs  batch.rs  decode.rs  enhance.rs  export.rs  injector.rs  lib.rs  local_api.rs  main.rs  model.rs  secure_keys.rs  settings.rs  srt.rs  streaming.rs  system_audio.rs  whisper.rs
