[package]
name = "hebrew-dictation"
version = "2.11.0"
description = "הכתבה בעברית — Hebrew Voice Dictation by BinTech AI"
authors = ["Henry Stauber <henrystauber22@gmail.com>"]
edition = "2021"

[lib]
name = "hebrew_dictation_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "io-util", "macros"] }
cpal = "0.15"
sha2 = "0.10"
enigo = "0.2"
reqwest = { version = "0.12", features = ["stream", "multipart", "json"] }
futures-util = "0.3"
dirs = "6"
whisper-rs = "0.16"
arboard = "3"
sysinfo = "0.33"
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
url = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
# IMPORTANT: the platform backend features are REQUIRED. Without `windows-native`
# (and `apple-native` for macOS) keyring v3 silently falls back to an in-memory
# MOCK store — writes "succeed" but nothing reaches Windows Credential Manager /
# Keychain, so every saved API key is lost on restart. (Bug: Groq key vanished
# after restart; Deepgram only survived via the DEEPGRAM_API_KEY env var.)
keyring = { version = "3", features = ["windows-native", "apple-native"] }
docx-rs = "0.4"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
# Pure-Rust audio decode (file upload → 16kHz mono f32). No ffmpeg.
# aac + isomp4 are OFF by default and are REQUIRED for iPhone .m4a (AAC-LC in MP4).
symphonia = { version = "0.6", features = ["mp3", "aac", "isomp4", "alac", "vorbis", "ogg", "wav", "flac"] }
# Resample native rate → 16000 Hz. v3 = full rewrite (Fft, audioadapter, Indexing flush).
rubato = "3"
# Minimal blocking HTTP server for the opt-in local API (127.0.0.1 only) — no
# async runtime integration needed, so this runs on its own plain OS thread.
tiny_http = "0.12"
